# freedom/src/main/kotlin/com/seeddestiny/freedom/account/model/AccountRole.kt
@@ -1,0 +1,7 @@
+package com.seeddestiny.freedom.account.model
+
+enum class AccountRole {
+    ADMIN,
+    STAFF,
+    MEMBER
+}
