# freedom/src/main/kotlin/com/seeddestiny/freedom/account/model/UpdatePasswordInput.kt
@@ -1,0 +1,11 @@
+package com.seeddestiny.freedom.account.model
+
+import java.io.Serializable
+
+data class UpdatePasswordInput(
+    var accountId: String? = null,
+
+    var oldPassword: String? = null,
+
+    var newPassword: String? = null,
+) : Serializable
